<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#123456">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:padding="10dp"
        android:drawableLeft="@drawable/profile"
        android:background="#ffffff"
        android:hint="@string/pseudo"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:padding="10dp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/confirm_password"
        android:padding="10dp" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorButton"
        android:textColor="@color/textColorButton"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>